# DataDevOps

./: .env.dev  .env.example  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  CLI_OUTPUT_EXAMPLES.md  LICENSE  Makefile  QUICKSTART.md  README.md  __main__.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: develop.yml  main.yml
src/cli/: __init__.py  config.py  logger.py  main.py
src/cli/commands/: __init__.py  config.py  data.py  health.py
tests/: conftest.py  test_commands.py  test_config.py  test_main.py
